--- a/css/common.css
+++ b/css/common.css
@@ -1,10 +1,85 @@
-@media screen and (min-width:992px){
-    html{
-        font-size: 20px;
-    }
+/* 表格页面和弹出层的公共样式，以职工管理的弹出层为模板
+* 其余页面根据具体情况在自己页面自定义
+*/
+body{
+    background-color: #E9FBDB;
+    padding-top: 50px;
+    min-width: 767px;
 }
-@media screen and (max-width:991px){
-    html{
-        font-size: 14px;
-    }
+.main{
+    width: 900px;
+    margin: 0 auto;
+    position: relative;
+}
+.main h1{
+    color: #01AAED;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    border-bottom: 2px solid ;
+}
+
+/* 职工信息查看框 */
+#view-wrap,#edit-wrap{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: none;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color:rgba(0, 0, 0, 0.5);
+}
+#view,#editbox{
+    width: 500px;
+    margin: 0 auto;
+    background-color: #fff;
+}
+#view p{
+    font-size: 20px;
+    font-weight: bold;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    border-bottom: 1px solid rgb(229, 229, 229);
+}
+#view ul{
+    margin-top: 10px;
+    padding-left: 167px;
+    border-bottom: 1px solid rgb(229, 229, 229);
+}
+#view ul li{
+    line-height: 40px;
+}
+#view ul li span:first-child{
+    font-size: 18px;
+    font-weight: bold;
+}
+#view>div{
+    margin-top: 10px;
+    overflow: hidden;
+    padding: 10px 0;
+}
+#closeBtn{
+    outline: none;
+    padding: 5px 0;
+    width: 60px;
+    float: right;
+    margin-right: 15px;
+}
+/* 职工信息编辑框 */
+#editbox{
+    padding-top: 30px;
+}
+#editbox>div:first-child{
+    width: 400px;
+    margin: 0 auto;
+}
+#editbox>div:last-child{
+    padding: 0 15px;
+    overflow: hidden;
+}
+#confirmBtn{
+    float: left;
+}
+#cancelBtn{
+    float: right;
 }
