--- a/css/goodsPage.css
+++ b/css/goodsPage.css
@@ -4,6 +4,10 @@
 .main h1:last-of-type{
     margin-top: 20px;
 }
+.main .add{
+    margin-top: 20px;
+    margin-left: 20px;
+}
 /* 状态栏字体图标 */
 #font-ok,#font-no{
     width: 26px;
@@ -18,4 +22,35 @@
 }
 .layui-icon.layui-icon-ok,.layui-icon.layui-icon-close{
     color: #fff;
+}
+/* 添加物资弹出层 */
+#add-wrap{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display: none;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    background-color:rgba(0, 0, 0, 0.5);
+}
+#addbox{
+    width: 500px;
+    margin: 0 auto;
+    padding-top: 30px;
+    background-color: #fff;
+}
+#addbox>div:first-child{
+    width: 400px;
+    margin: 0 auto;
+}
+#addbox>div:last-child{
+    padding: 0 15px;
+    overflow: hidden;
+}
+#addBtn{
+    float: left;
+}
+#quitBtn{
+    float: right;
 }
